--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -152,11 +152,11 @@ jobs:
 
       - name: Generate proto and documentation
         run: |
-          sudo make doc-proto
+          make doc-proto
 
       - name: Generate command documentation
         run: |
-          sudo make doc-command
+          make doc-command
 
       - name: Check Git diff in generated files (proto + docs)
         run: |
