--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -134,10 +134,12 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Find changed proto files
         id: changed-proto-files
-        uses: tj-actions/changed-files@v31.0.3
+        uses: tj-actions/changed-files@v34.5.4
         with:
           files: |
             proto/**/*.proto
