--- a/buf.gen.proto.yaml
+++ b/buf.gen.proto.yaml
@@ -1,12 +1,8 @@
 version: v1
-
 plugins:
   - name: gocosmos
     out: .
-    opt:
-      - plugins=interfacetype+grpc
-
+    opt: plugins=grpc
   - name: grpc-gateway
     out: .
-    opt:
-      - logtostderr=true
+    opt: logtostderr=true,allow_colon_final_segments=true
