--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -1,7 +1,7 @@
 version: v1
 name: buf.build/okp4/okp4d
 deps:
-  - buf.build/cosmos/cosmos-sdk
+  - buf.build/cosmos/cosmos-sdk:v0.47.0
   - buf.build/cosmos/cosmos-proto
   - buf.build/cosmos/gogo-proto
   - buf.build/googleapis/googleapis
@@ -23,3 +23,5 @@ lint:
     - RPC_RESPONSE_STANDARD_NAME
     - RPC_REQUEST_RESPONSE_UNIQUE
     - COMMENT_MESSAGE
+  ignore:
+    - tendermint
