--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,14 +35,14 @@ jobs:
       - name: Lint regular markdown files
         uses: avto-dev/markdown-lint@v1.5.0
         with:
-          args: "**/*.md"
-          ignore: "CHANGELOG.md docs/**/*.md"
+          args: '**/*.md'
+          ignore: 'CHANGELOG.md docs/**/*.md'
 
       - name: Lint generated markdown files
         uses: avto-dev/markdown-lint@v1.5.0
         with:
-          args: "docs/**/*.md"
-          config: "docs/.markdownlint.yaml"
+          args: 'docs/**/*.md'
+          config: 'docs/.markdownlint.yaml'
 
   lint-yaml:
     runs-on: ubuntu-22.04
@@ -99,7 +99,7 @@ jobs:
         uses: actions/setup-go@v4.0.1
         if: steps.changed-go-files.outputs.any_changed == 'true'
         with:
-          go-version: "1.19"
+          go-version: '1.20'
 
       - name: Lint go code (golangci-lint)
         uses: golangci/golangci-lint-action@v3
@@ -158,7 +158,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.0.1
         with:
-          go-version: "1.19"
+          go-version: '1.20'
 
       - name: Generate command documentation
         run: |
