--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -100,6 +100,7 @@ jobs:
         if: steps.changed-go-files.outputs.any_changed == 'true'
         with:
           go-version: '1.20'
+          cache: false
 
       - name: Lint go code (golangci-lint)
         uses: golangci/golangci-lint-action@v3
