ci(workflow): add test command

--- a/starship/Makefile
+++ b/starship/Makefile
@@ -6,6 +6,14 @@ HELM_CHART = devnet
 HELM_VERSION = v0.1.38
 
 ###############################################################################
+###                              Run tests                                  ###
+###############################################################################
+
+.PHONY: test
+test:
+	cd tests/ go test ./...
+
+###############################################################################
 ###                              All commands                               ###
 ###############################################################################
 
