--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,4 +1,4 @@
-name: E2E tests
+name: Test E2E
 
 on:
   push:
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches:
       - main
+
+concurrency:
+  group: e2e-test-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   e2e-test:
@@ -17,18 +21,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+      - name: Setup Go environment
+        uses: actions/setup-go@v4.0.1
         with:
-          go-version: ^1.20
-        id: go
+          go-version: "1.20"
 
-      # Starship Infra setup
-      # - Connects to k8s cluster with kubeconfig (digital ocean)
-      # - Creates a new namespace based on the name (deleted in next step)
-      # - Spins up the infra with the given config file
-      # - Waits till all nodes are running (timeout 30m)
-      # - Port forward all ports to localhost for next steps to connect
       - name: Setup Test infra
         id: starship-action
         uses: cosmology-tech/starship-action@0.2.12
@@ -41,11 +38,11 @@ jobs:
         run: |
           cd starship/
           go mod tidy
+
           make test
 
-      # Starship resource cleanup on cluster
       # todo(@anmol1696): change this to be post step of the action
-      - name: Cleanup cluster
+      - name: Clean cluster
         if: always()
         run: |
           helm delete $DEVNET_NAME --debug --namespace $DEVNET_NAMESPACE --wait || true
