--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.0.1
         with:
-          go-version: '1.20'
+          go-version: "1.20"
 
       - name: Test go project
         run: |
@@ -73,7 +73,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v4.0.1
         with:
-          go-version: '1.20'
+          go-version: "1.20"
 
       - name: Install OKP4 blockchain
         run: |
