--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -9,7 +9,7 @@ plugins:
   - - "@semantic-release/changelog"
     - changelogFile: CHANGELOG.md
       changelogTitle: "# ØKP4 protocol changelog"
-  - - "@google/semantic-release-replace-plugin"
+  - - "semantic-release-replace-plugin"
     - replacements:
         - files: [version]
           from: ^.+$
