--- a/.golangci.yml
+++ b/.golangci.yml
@@ -51,6 +51,7 @@ linters:
     - unconvert
     - unparam
     - unused
+    - wastedassign
     - whitespace
 
 linters-settings:
@@ -93,10 +94,10 @@ issues:
     - source: "^//\\s*go:generate\\s"
       linters:
         - lll
-    - source: '(noinspection|TODO)'
+    - source: "(noinspection|TODO)"
       linters:
         - godot
-    - source: '//noinspection'
+    - source: "//noinspection"
       linters:
         - gocritic
     - source: "^\\s+if _, ok := err\\.\\([^.]+\\.InternalError\\); ok {"
