docs(logic): re-generate documentation after interface changes

--- a/proto/logic/docs.yaml
+++ b/proto/logic/docs.yaml
@@ -107,7 +107,6 @@ description: |
     "height": "7235",
     "gas_used": "9085",
     "answer": {
-      "success": true,
       "has_more": false,
       "variables": [
         "X"
@@ -117,10 +116,7 @@ description: |
           "substitutions": [
             {
               "variable": "X",
-              "term": {
-                "name": "john",
-                "arguments": []
-              }
+              "expression": "john"
             }
           ]
         }
@@ -147,13 +143,12 @@ description: |
   - `height`: the height of the block at which the query was evaluated.
   - `gas_used`: the amount of gas used to evaluate the query.
   - `answer`: the result of the query. It is an object that contains the following fields:
-    - `success`: a boolean that indicates whether the query was successful or not. Successful means that solutions were
-      found, i.e. the query was satisfiable.
     - `has_more`: a boolean that indicates whether there are more results to be retrieved. It's just informative since no
       more results can be retrieved.
     - `variables`: an array of strings that contains the names of the variables that were used in the query.
-    - `results`: an array of objects that contains the results of the query. Each result is an object that contains the
+    - `results`: an array of objects that contains the solutions of the query. Each result is an object that contains the
       following fields:
+      - `error`: an optional string that contains an error message if the query failed for the current solution.
       - `substitutions`: an array of objects that contains the substitutions that were made to satisfy the query. A
         substitution is a set of variable-value pairs that is used to replace variables with constants. A substitution
         is the result of unification. A substitution is used to replace variables with constants when evaluating a rule.
