--- a/proto/mint/docs.yaml
+++ b/proto/mint/docs.yaml
@@ -8,7 +8,7 @@ description: |
   ## Calculation of Inflation
 
   The method for determining the inflation rate is outlined in the
-  [OKP4 Whitepaper - Token Model](https://docs.okp4.network/whitepaper/token-model).
+  [AXONE Whitepaper - Token Model](https://docs.axone.xyz/whitepaper/token-model).
 
   ## Per-Block Token Generation
 
