--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           go-version: "1.21"
 
-      - name: Install OKP4 blockchain
+      - name: Install AXONE blockchain
         run: |
           make build && make install
 
