ci: fix codecov by setting token

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
           env_vars: OS,GOLANG
           fail_ci_if_error: false
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   test-blockchain:
     runs-on: ubuntu-22.04
