build(project): say goodbye to deprecated exportloopref and hi to copyloopvar

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,7 @@ linters:
     - asciicheck
     - bidichk
     - bodyclose
+    - copyloopvar
     - cyclop
     - dupl
     - durationcheck
@@ -14,7 +15,6 @@ linters:
     - errname
     - errorlint
     - exhaustive
-    - exportloopref
     - forbidigo
     - funlen
     - gci
