ci(workflow): use dedicated build-go goal for binary compilation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build go project
         run: |
-          make build
+          make build-go
 
   build-docker:
     runs-on: ubuntu-22.04
