--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
           branch: main
           extra_plugins: |
             @semantic-release/changelog
-            @semantic-release/exec
+            @semantic-release/exec@6.0.3
             @semantic-release/git
             semantic-release-replace-plugin@1.2.7
           extends: |
